--- a/src/my-invitati.html
+++ b/src/my-invitati.html
@@ -33,7 +33,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 
 
-      <firebase-app auth-domain="emmawalterwedding.firebaseapp.com"
+      <!--<firebase-app auth-domain="emmawalterwedding.firebaseapp.com"
       database-url="https://emmawalterwedding.firebaseio.com"
       api-key="AIzaSyBHvgsIFt0NQMTVn0Z8Zc_8vZcPAauejrc"
       name="invitati">
@@ -42,7 +42,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       path="/invitati"
       data="{{invitati}}"
       app-name="invitati">
-    </firebase-query>
+    </firebase-query>-->
 
     <div class="card">
       <h3>{{calcString("invitati", langPath, lingua)}}</h3>
