--- a/public/src/my-app.html
+++ b/public/src/my-app.html
@@ -95,7 +95,7 @@
       <app-drawer id="drawer">
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          
+          <a name="view1" href="/view1">Home</a>
           <a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>
           <a name="rsvp" href="/rsvp">RSVP</a>
           <a name="" href="" id="dove">{{calcString("dove", langPath, lingua)}}</a>
