--- a/src/my-app.html
+++ b/src/my-app.html
@@ -8,31 +8,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
-<link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
-<link rel="import" href="../bower_components/app-layout/app-header/app-header.html">
-<link rel="import" href="../bower_components/app-layout/app-header-layout/app-header-layout.html">
-<link rel="import" href="../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
-<link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html">
-<link rel="import" href="../bower_components/app-route/app-location.html">
-<link rel="import" href="../bower_components/app-route/app-route.html">
-<link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
-<link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
-<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
-<link rel="import" href="../bower_components/iron-selector/iron-selector.html">
-<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
-<link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
-<link rel="import" href="../bower_components/paper-item/paper-item.html">
-<link rel="import" href="../bower_components/paper-fab/paper-fab.html">
-<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
-<link rel="import" href="../bower_components/polymerfire/polymerfire.html">
-<link rel="import" href="my-login.html">
+
+<link rel="import" href="imports.html">
 <script src="../bower_components/moment/moment.js"></script>
 <link rel="import" href="my-icons.html">
 
@@ -49,6 +26,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       };
       var fb = firebase.initializeApp(config);
     </script>
+      
 
 <dom-module id="my-app">
   <template>
@@ -108,6 +86,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       data="{{invitati}}"
       app-name="invitati">
     </firebase-query>
+    <firebase-query id="query"
+      path="/risposte"
+      data="{{risposte}}"
+      app-name="invitati">
+    </firebase-query>
 
 
 
@@ -126,9 +109,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="view1" href="/view1">Home</a>
-          <a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>
+          <!--<a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>-->
           <a name="rsvp" href="/rsvp">RSVP</a>
-          <a name="" href="" id="dove">{{calcString("dove", langPath, lingua)}}</a>
+          <a name="where" href="/where" id="dove">{{calcString("dove", langPath, lingua)}}</a>
           <a name="" href="">{{calcString("quando", langPath, lingua)}}</a>
           <a name="" href="" on-tap="prova">Test</a>
         </iron-selector>
@@ -151,9 +134,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             attr-for-selected="name"
             fallback-selection="view404"
             role="main">
-          <my-view1 name="view1"></my-view1>
+          <my-view1 name="view1" lingua="{{lingua}}" lang-path="{{langPath}}" ></my-view1>
           <my-invitati name="invitati" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}" ></my-invitati>
           <my-rsvp name="rsvp" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}" status-known="{{statusKnown}}" nome="{{nome}}"></my-rsvp>
+          <my-where name="where" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}" status-known="{{statusKnown}}" nome="{{nome}}"></my-where>
+          <my-risposte name="risposte" risposte="{{risposte}}" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}" status-known="{{statusKnown}}" nome="{{nome}}"></my-where>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
       </app-header-layout>
@@ -163,7 +148,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <paper-dialog modal id="loginDialog" entry-animation="scale-up-animation"
               exit-animation="fade-out-animation">
       <h2>Login</h2>
-      <div>Please insert the password provided in the invitation email you received</div>
+      <div>{{calcString("richiestapassword", langPath, lingua)}}</div>
       <paper-dialog-scrollable>
         <paper-input label="Password"></paper-input>
       </paper-dialog-scrollable>
@@ -197,6 +182,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         },
 
         invitati: {type: Array},
+
+        risposte: {type: Array},
 
         langPath:{value:"ita"},
 
@@ -238,7 +225,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         console.log("observer da padre");
       },
 
-      calcString: function(campo, path, lingua){
+     calcString: function(campo, path, lingua){
+
+        if(this.lingua[path][campo] == null)
+          return "<no string>"
 
         return this.lingua[path][campo];
       },
