--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -21,25 +21,33 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         
       }
 
-      h1, h2, h3, #text{
+      h1, h2, h3, .text{
         text-align: center;
       }
     </style>
 
     <div class="card">
-      <h1>Emma &amp Walter</h1>
-      <h2>23rd September, 2017</h2>
-      <h2>Trivignano Udinese (UD), Italia</h2>
+      <h1>{{calcString("hometitolo1", langPath, lingua)}}</h1>
+      <h2>{{calcString("hometitolo2", langPath, lingua)}}</h2>
+      <h2>{{calcString("hometitolo3", langPath, lingua)}}</h2>
 
-      <div id="text"> 
-“We are so grateful to have you all in our lives. Thank you for your love, friendship and support. 
-We are so excited about sharing our big day with you” – E&ampW</div>
+      <div class="text">{{calcString("homecont1", langPath, lingua)}}</div>
+      <div class="text">{{calcString("homecont2", langPath, lingua)}}</div>
     </div>
   </template>
 
   <script>
     Polymer({
       is: 'my-view1',
+
+
+      calcString: function(campo, path, lingua){
+
+        if(this.lingua[path][campo] == null)
+          return "<no string>"
+
+        return this.lingua[path][campo];
+      },
 
       dbTest: function(){
          
