--- a/src/my-login.html
+++ b/src/my-login.html
@@ -64,7 +64,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       properties: {
           invitati: {type: Array},
           statusKnown: {type: String, value: "UNKNOWN", notify: true},
-          nome: {type: String, notify: true}
+          nome: {type: String, notify: true},
+          password: {type: String, notify: true}
         },
 
       openDialog: function(){
@@ -76,11 +77,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       login: function(){
 
            var trovato = false;
+           this.set("statusKnown", "UNKNOWN");
 
           for( var i = 0; i< this.invitati.length; i++){
             if(this.invitati[i].password == this.$.password.value){
               trovato = true;
                this.nome = this.invitati[i].nome;
+               this.password = this.invitati[i].password;
                this.$.error.hidden = true;
                this.$.password.value = "";
                this.$.loginDialog.close();
