modifiche su vista home

--- a/src/my-where.html
+++ b/src/my-where.html
@@ -29,25 +29,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
     <div class="card">
-      <h3>{{calcString("dovetitolo1", langPath, lingua)}} {{nome}}</h3>
-      <div>{{calcString("dovetitolo1cont1", langPath, lingua)}} {{nome}}</div>
-      <div>{{calcString("dovetitolo1cont2", langPath, lingua)}} {{nome}}</div>
-      <h3>{{calcString("dovetitolo2", langPath, lingua)}} {{nome}}</h3>
-      <div>{{calcString("dovetitolo2cont1", langPath, lingua)}} {{nome}}</div>
-      <div>{{calcString("dovetitolo2cont2", langPath, lingua)}} {{nome}}</div>
-      <div>{{calcString("dovetitolo2cont3", langPath, lingua)}} {{nome}}</div>
-      <div>{{calcString("dovetitolo2cont4", langPath, lingua)}} {{nome}}</div>
-      <div>{{calcString("dovetitolo2cont5", langPath, lingua)}} {{nome}}</div>
-      <h3>{{calcString("dovetitolo3", langPath, lingua)}} {{nome}}</h3>
-      <div>{{calcString("dovetitolo3cont1", langPath, lingua)}} {{nome}}</div>
-      <div>{{calcString("dovetitolo3cont2", langPath, lingua)}} {{nome}}</div>
-      <div>{{calcString("dovetitolo3cont3", langPath, lingua)}} {{nome}}</div>
-      <div>{{calcString("dovetitolo3cont4", langPath, lingua)}} {{nome}}</div>
-      <div>{{calcString("dovetitolo3cont5", langPath, lingua)}} {{nome}}</div>
-      <div>{{calcString("dovetitolo3cont6", langPath, lingua)}} {{nome}}</div>
-      <div>{{calcString("dovetitolo3cont7", langPath, lingua)}} {{nome}}</div>
-      <div>{{calcString("dovetitolo3cont8", langPath, lingua)}} {{nome}}</div>
-      <div>{{calcString("dovetitolo3cont9", langPath, lingua)}} {{nome}}</div>
+      <h3>{{calcString("dovetitolo1", langPath, lingua)}}</h3>
+      <div>{{calcString("dovetitolo1cont1", langPath, lingua)}}</div>
+      <div>{{calcString("dovetitolo1cont2", langPath, lingua)}}</div>
+      <h3>{{calcString("dovetitolo2", langPath, lingua)}}</h3>
+      <div>{{calcString("dovetitolo2cont1", langPath, lingua)}}</div>
+      <div>{{calcString("dovetitolo2cont2", langPath, lingua)}}</div>
+      <div>{{calcString("dovetitolo2cont3", langPath, lingua)}}</div>
+      <div>{{calcString("dovetitolo2cont4", langPath, lingua)}}</div>
+      <div>{{calcString("dovetitolo2cont5", langPath, lingua)}}</div>
+      <h3>{{calcString("dovetitolo3", langPath, lingua)}}</h3>
+      <div>{{calcString("dovetitolo3cont1", langPath, lingua)}}</div>
+      <div>{{calcString("dovetitolo3cont2", langPath, lingua)}}</div>
+      <div>{{calcString("dovetitolo3cont3", langPath, lingua)}}</div>
+      <div>{{calcString("dovetitolo3cont4", langPath, lingua)}}</div>
+      <div>{{calcString("dovetitolo3cont5", langPath, lingua)}}</div>
+      <div>{{calcString("dovetitolo3cont6", langPath, lingua)}}</div>
+      <div>{{calcString("dovetitolo3cont7", langPath, lingua)}}</div>
+      <div>{{calcString("dovetitolo3cont8", langPath, lingua)}}</div>
+      <div>{{calcString("dovetitolo3cont9", langPath, lingua)}}</div>
   </template>
 
   <script>
