--- a/src/my-app.html
+++ b/src/my-app.html
@@ -36,6 +36,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --app-secondary-color: black;
 
         display: block;
+
+        /*background: url("../images/sfondo.jpg");  */
+      }
+
+      #navigation{
+        float: left;
+        /*background: red;*/
+        padding: 20px 20px 20px 0;
+        height: 100%;
+        display: flex;
+        align-items: center;
       }
 
       app-header {
@@ -44,6 +55,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       app-header paper-icon-button {
         --paper-icon-button-ink-color: white;
+      }
+
+      app-drawer {
+      --app-drawer-width: 150px;
+      --app-drawer-scrim-background: rgba(0, 0, 100, 0.8);
+      --app-drawer-content-container: {
+        background-color:  transparent;  /* #B0BEC5;  */
+        padding-top: 256px;
+        }
       }
 
       .drawer-list {
@@ -106,10 +126,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <app-drawer-layout fullbleed>
       <!-- Drawer content -->
       <app-drawer id="drawer">
-        <app-toolbar>Menu</app-toolbar>
-        <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
+          <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="view1" href="/view1">Home</a>
-          <!--<a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>-->
+          <a name="risposte" href="/risposte">risposte</a>
+          <a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>
           <a name="rsvp" href="/rsvp">RSVP</a>
           <a name="where" href="/where" id="dove">{{calcString("dove", langPath, lingua)}}</a>
           <a name="" href="">{{calcString("quando", langPath, lingua)}}</a>
@@ -119,7 +139,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <!-- Main content -->
       <app-header-layout has-scrolling-region>
-
         <app-header condenses reveals effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
@@ -128,6 +147,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <img class="langBtn" on-tap="toEng" src="../images/united_kingdom_flag.ico" width="40px">
           </app-toolbar>
         </app-header>
+
+        <!--<div id="navigation">
+          <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
+            <a name="view1" href="/view1">Home</a>
+            <a name="risposte" href="/risposte">risposte</a>
+            <a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>
+            <a name="rsvp" href="/rsvp">RSVP</a>
+            <a name="where" href="/where" id="dove">{{calcString("dove", langPath, lingua)}}</a>
+            <a name="" href="">{{calcString("quando", langPath, lingua)}}</a>
+            <a name="" href="" on-tap="prova">Test</a>
+          </iron-selector>
+      </div>-->
 
         <iron-pages
             selected="[[page]]"
@@ -165,9 +196,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
      status-known="{{statusKnown}}"
      nome="{{nome}}"
      password="{{password}}"></my-login>
-
-
-
 
   </template>
 
