--- a/src/my-app.html
+++ b/src/my-app.html
@@ -57,7 +57,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       app-drawer {
-      --app-drawer-width: 150px;
+      --app-drawer-width: 180px;
       --app-drawer-scrim-background: rgba(0, 0, 100, 0.8);
       --app-drawer-content-container: {
         background-color:  transparent;  /* #B0BEC5;  */
@@ -127,12 +127,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <app-drawer id="drawer">
           <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="view1" href="/view1">Home</a>
+          <a name="proposal" href="/proposal">{{calcString("proposta", langPath, lingua)}}</a>
           <a name="risposte" href="/risposte">risposte</a>
           <a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>
+          <a name="list" href="/list">{{calcString("lista", langPath, lingua)}}</a>
           <a name="rsvp" href="/rsvp">RSVP</a>
           <a name="where" href="/where" id="dove">{{calcString("dove", langPath, lingua)}}</a>
-          <a name="" href="">{{calcString("quando", langPath, lingua)}}</a>
-          <a name="" href="" on-tap="prova">Test</a>
+          <a name="schedule" href="/schedule">{{calcString("programma", langPath, lingua)}}</a>
         </iron-selector>
       </app-drawer>
 
@@ -167,8 +168,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <my-view1 name="view1" lingua="{{lingua}}" lang-path="{{langPath}}" ></my-view1>
           <my-invitati name="invitati" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}" ></my-invitati>
           <my-rsvp name="rsvp"  invitati="{{invitati}}" risposte="{{risposte}}" lingua="{{lingua}}" lang-path="{{langPath}}" status-known="{{statusKnown}}" nome="{{nome}}" password="{{password}}"></my-rsvp>
-          <my-where name="where" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}" status-known="{{statusKnown}}" nome="{{nome}}"></my-where>
-          <my-risposte name="risposte" risposte="{{risposte}}" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}" status-known="{{statusKnown}}" nome="{{nome}}"></my-where>
+          <my-where name="where"  lingua="{{lingua}}" lang-path="{{langPath}}"></my-where>
+          <my-proposal name="proposal" lingua="{{lingua}}" lang-path="{{langPath}}" ></my-proposal>
+          <my-list name="list" lingua="{{lingua}}" lang-path="{{langPath}}" ></my-list>
+          <my-risposte name="risposte" risposte="{{risposte}}" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}" status-known="{{statusKnown}}" nome="{{nome}}"></my-risposte>
+          <my-schedule name="schedule" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}" status-known="{{statusKnown}}" nome="{{nome}}" password="{{password}}"></my-schedule>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
       </app-header-layout>
